--- a/index.html
+++ b/index.html
@@ -4,25 +4,36 @@
 	<meta charset="utf-8">
 	<title>Mon site web</title>
 	<link rel="stylesheet" href="css/style.css" >
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	</head>
 	
 	<body>
 		<header>
-			<div class="bar">
-				<div class="logo">
-					<a href="index.html" alt="home">
-						<h1>FOOSESHOES</h1>
-					</a>
-				</div>					
-				
-				<div class="pannel">
-					<div class="search"></div>	
-					<div class="login">
-						<a href="login.html" alt="login">LOGIN or REGISTER</a>
-					</div>
-				</div>		
+		<div id="back">
+			<div class="wrap">
+				<div class="bar">
+					<div class="logo">
+						<a href="index.html" alt="home">
+							<h1>FOOSESHOES</h1>
+						</a>
+					</div>					
+					
+					<div class="pannel">
+						<div class="search">
+							<i class="fa fa-search"></i>
+						</div>	
+						<div class="login">
+							<ul>
+								<li><a href="login.html">Login </a> </li>
+								<span class="log">or</span>
+								<li><a href="register.html"> Register</a> </li>								   
+								<div class="clear"></div>
+							</ul>
+						</div>
+					</div>		
+				</div>
 			</div>
-			
+		</div>
 			<div class="barmenu">
 				<nav>
 					<ul>
