--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		</div>
 		</header>	
 		<div class="slider">
-			<img src="img/slider.jpg" alt="slider image 1"/>
+			<img class="full" src="img/slider.jpg" alt="slider image 1"/>
 			<div class="info">
 				<div class="button">$145.99</div>
 				<div class="infobig">Pink Shoes <br>	2013 collection</div>
